--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -1,9 +1,11 @@
 // variables
-$accent: #E4A436;
-$primary: #709B6B;
-$secondary: #345231;
+$primary: #fff7c9;
+$secondary: #642e68;
+$tertiary: #a9902b;
+$accent: #c68006;
 $black: #1F1F1F;
 $white: #F6F6F6;
+$background:#2a1824;
 
 $headingStack: "Abril Fatface", cursive;
 $bodyStack: "Montserrat", sans-serif;
