--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -1,22 +1,138 @@
+.headerWrapper {
+	max-width: 1080px;
+	width: 80vw;
+	margin: 0 auto;
+	position: relative;
+	height: 120vh;
+}
+header {
+	top: 0;
+	background-image: url(../assets/mainFinal.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 120vh;
+	width: 80%;
+	margin: 0 auto;
+	position: relative;
+	opacity: 0;
+	animation: appear 2s linear forwards;
+	overflow-y: hidden;
+}
+
+@keyframes appear {
+	0%,
+	10% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.titleContainer {
+	position: relative;
+	border-radius: 10px;
+	padding: 20px;
+	margin: 20px auto;
+	width: 100%;
+	top: 100px;
+	font-family: $mainStack;
+	color: $accent;
+
+	h1 {
+		font-size: calc(6rem + 20%);
+		margin: 20px 0;
+	}
+	h2 {
+		text-align: right;
+		opacity: 0.8;
+		margin: 20px;
+	}
+}
+
+.decoration {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	height: 350px;
+	width: 350px;
+	background: url(../assets/main2.png);
+	background-size: cover;
+	animation: slideUp 4s forwards ease;
+}
+
+@keyframes slideUp {
+	0% {
+		bottom: -800px;
+	}
+
+	50% {
+		bottom: 20px;
+	}
+
+	65% {
+		bottom: -15px;
+	}
+
+	75% {
+		bottom: 7px;
+	}
+
+	90% {
+		bottom: -5px;
+	}
+
+	100% {
+		bottom: 0;
+	}
+}
+
+.decoration2 {
+	@include flexCol;
+		position: relative;
+		color: $accent;
+		font-size: 4rem;
+		margin: 60vh auto 0;
+
+		span {
+			line-height: 0.5;
+			margin:0;
+			opacity: 0;
+			animation: appear 1.5s alternate ease-in-out infinite;
+		}
+
+		.dot1{
+			animation-delay: 2s;
+		}
+		.dot2{
+			animation-delay: 2.5s;
+		}
+		.dot3{
+			animation-delay: 3s;
+		}
+}
+
 .landingPage {
+	height: 80vh;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 6fr 1fr;
 	grid-template-areas:
 		"form gallery gallery"
 		"form gallery gallery";
-		// "footer footer footer";
-    grid-gap: 15px;
+	grid-gap: 15px;
 }
-
 
 .drinkFilters {
 	grid-area: form;
-	background: $primary;
+	background: url(../assets/backsplash.jpg), black;
+	background-size: cover;
+	box-shadow: inset 20px 20px 40px black, inset -20px -20px 40px black;
 }
 .drinkGallery {
 	grid-area: gallery;
-	background: $primary;
+	background: $accent;
 }
 .footer {
 	grid-area: footer;
@@ -26,14 +142,14 @@
 
 .drinkGallery ul {
 	@include flexRow(space-evenly);
-    flex-wrap: wrap;
-    padding: 10px;
+	flex-wrap: wrap;
+	padding: 10px;
 }
 
 li {
 	width: 30%;
 	img {
-        width: 100%;
-        height: auto;
+		width: 100%;
+		height: auto;
 	}
 }
