added color variables

--- a/styles/SCSS/_variables.scss
+++ b/styles/SCSS/_variables.scss
@@ -1,7 +1,7 @@
 // variables
-// $primary: #fff7c9;
-$secondary: #642e68;
-// $tertiary: #a9902b;
+$primary: #3A405A;
+$secondary: #F9DEC9;
+$tertiary: #F9F7F3;
 $accent: #8ce8fb;
 $black: #1F1F1F;
 $white: #F6F6F6;
