--- a/styles/style.css
+++ b/styles/style.css
@@ -309,6 +309,11 @@ header {
   overflow-y: hidden;
 }
 
+.appearJS {
+  -webkit-animation: appear 0.5s ease forwards;
+          animation: appear 0.5s ease forwards;
+}
+
 @-webkit-keyframes appear {
   0%,
   10% {
@@ -334,21 +339,72 @@ header {
   border-radius: 10px;
   padding: 20px;
   margin: 20px auto;
-  width: 100%;
-  top: 100px;
+  width: 80%;
+  top: 200px;
   font-family: "Poiret One", cursive;
   color: #8ce8fb;
 }
 
 .titleContainer h1 {
+  position: relative;
   font-size: calc(6rem + 20%);
   margin: 20px 0;
+  -webkit-animation: slideInLeft 2s forwards;
+          animation: slideInLeft 2s forwards;
 }
 
 .titleContainer h2 {
+  position: relative;
   text-align: right;
-  opacity: 0.8;
+  opacity: 0;
   margin: 20px;
+  right: -100px;
+  -webkit-animation: slideInRight 2s ease 0.5s forwards;
+          animation: slideInRight 2s ease 0.5s forwards;
+}
+
+@-webkit-keyframes slideInLeft {
+  0% {
+    left: -100px;
+    opacity: 0;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes slideInLeft {
+  0% {
+    left: -100px;
+    opacity: 0;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slideInRight {
+  0% {
+    right: -100px;
+    opacity: 0;
+  }
+  100% {
+    right: 0;
+    opacity: 0.8;
+  }
+}
+
+@keyframes slideInRight {
+  0% {
+    right: -100px;
+    opacity: 0;
+  }
+  100% {
+    right: 0;
+    opacity: 0.8;
+  }
 }
 
 .decoration {
@@ -454,9 +510,9 @@ header {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 6fr 1fr;
-      grid-template-rows: 6fr 1fr;
-      grid-template-areas: "form gallery gallery" "form gallery gallery";
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+      grid-template-areas: "form gallery gallery" "form gallery gallery";
   grid-gap: 15px;
 }
 
@@ -467,8 +523,44 @@ header {
   grid-area: form;
   background: url(../assets/backsplash.jpg), black;
   background-size: cover;
-  -webkit-box-shadow: inset 20px 20px 40px black, inset -20px -20px 40px black;
-          box-shadow: inset 20px 20px 40px black, inset -20px -20px 40px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.drinkFilters form {
+  width: 100%;
+  padding: 10px;
+  font-size: 2rem;
+}
+
+button,
+input {
+  padding: 10px;
+  width: 100%;
+}
+
+label,
+h2 {
+  color: #8ce8fb;
+}
+
+button {
+  background: #F9DEC9;
+}
+
+input {
+  opacity: 0.5;
 }
 
 .drinkGallery {
@@ -477,12 +569,11 @@ header {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: gallery;
-  background: #8ce8fb;
 }
 
 .footer {
   grid-area: footer;
-  background: #642e68;
+  background: #F9DEC9;
 }
 
 .drinkGallery ul {
@@ -493,9 +584,9 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -504,11 +595,57 @@ header {
   padding: 10px;
 }
 
+.drinkGallery ul li:hover img,
+.drinkGallery ul li:focus img {
+  -webkit-filter: brightness(100%);
+          filter: brightness(100%);
+}
+
+.drinkGallery ul li:hover h3,
+.drinkGallery ul li:focus h3 {
+  text-shadow: 1px 1px 2px black;
+}
+
+h3 {
+  color: #F6F6F6;
+  font-size: 2rem;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
 li {
-  width: 30%;
+  position: relative;
+  opacity: 0;
+  width: calc(33% - 10px);
+  margin: 5px;
+}
+
+li:first-of-type img {
+  border-radius: 20px 0 0 0;
+}
+
+li:nth-of-type(3) img {
+  border-radius: 0 20px 0 0;
+}
+
+li:last-of-type img {
+  border-radius: 0 0 20px 0;
+}
+
+li:nth-last-of-type(3) img {
+  border-radius: 0 0 0 20px;
 }
 
 li img {
   width: 100%;
   height: auto;
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
 }
