--- a/styles/SCSS/_landingPage.scss
+++ b/styles/SCSS/_landingPage.scss
@@ -202,7 +202,7 @@ input {
 	li:hover,
 	li:focus {
 		img {
-			filter: brightness(100%);
+			filter: brightness(50%);
 		}
 		h3 {
 			text-shadow: 1px 1px 2px black;
@@ -244,9 +244,10 @@ li {
 	}
 
 	img {
+		filter: brightness(100%);
 		width: 100%;
 		height: auto;
-		filter: brightness(50%);
 		transition: 0.2s all;
+		border:2px solid $accent;
 	}
 }
