--- a/styles/style.css
+++ b/styles/style.css
@@ -614,6 +614,7 @@ h2 {
 .drinkFilters label,
 .drinkFilters h2 {
   color: #8ce8fb;
+  text-shadow: 1px 1px 2px black, -1px 1px 2px black;
 }
 
 .drinkFilters button {
