--- a/styles/SCSS/_drinkSpotlight.scss
+++ b/styles/SCSS/_drinkSpotlight.scss
@@ -1,6 +1,25 @@
 .drinkSpotlight {
   color:black;
   display: none;
+  grid-area: gallery;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: $secondary;
+  border-radius: 10px;
+
+  &:before {
+		content: " ";
+		position: absolute;
+		background: $white;
+		border-radius: 10px;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		opacity: 0.2;
+		z-index: 0;
+	}
   
   .ingredientList {
     li {
