--- a/styles/SCSS/_drinkSpotlight.scss
+++ b/styles/SCSS/_drinkSpotlight.scss
@@ -1,14 +1,16 @@
 .drinkSpotlight {
-  color:black;
-  display: none;
-  grid-area: gallery;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: $secondary;
-  border-radius: 10px;
+	display: none;
+	// justify-content: space-between;
+	// flex-wrap: wrap;
+	color: black;
+	grid-area: gallery;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
+	padding: 20px;
 
-  &:before {
+	&:before {
 		content: " ";
 		position: absolute;
 		background: $white;
@@ -20,10 +22,53 @@
 		opacity: 0.2;
 		z-index: 0;
 	}
-  
-  .ingredientList {
-    li {
-      opacity:1;
-    }
-  }
+
+	.imgContainer {
+		float: left;
+		width: 40%;
+
+		img {
+			width: 100%;
+			border-radius: 10px;
+			box-shadow: 0 0 5px 2px $primary;
+		}
+	}
+
+	h2 {
+		position: relative;
+		color: $accent;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-size: 2rem;
+		width: 50%;
+		float: right;
+	}
+
+	h3 {
+		text-align: left;
+		margin-top: 20px;
+		position: relative;
+		text-transform: uppercase;
+	}
+
+	.drinkInfo {
+		position: relative;
+		float: right;
+		width: 50%;
+		color: $white;
+	}
+
+	.ingredientList {
+		li {
+			opacity: 1;
+			font-size: 1.6rem;
+			margin: 0;
+		}
+	}
+
+	p {
+		line-height: 1.2;
+		margin: 0;
+		font-size: 1.6rem;
+	}
 }
